Revert header back to fixed, give nav and header z-index values

--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ hr {
 .header {
 	color: black;
 	font-family: sans-serif;
-	position: sticky;
+	position: fixed;
+	z-index: 1;
 }
 
 .header a, .main a {
@@ -30,6 +31,7 @@ hr {
 	color: black;
 	font-family: sans-serif;
 	font-size: 24px;
+	z-index: 0;
 }
 
 .nav a {
